# identity-abuse-lab-

./: .gitignore  .ruff.toml  ARTIFACT.md  ARTIFACT_CHECKLIST.md  CONTRIBUTING.md  Makefile  Makefile.paper  PROJECT_DESCRIPTION.md  PROJECT_MANIFEST.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.md  RELEASE_STATUS.md  ROADMAP.md  SECURITY.md  STATUS_AND_ROADMAP.md  VALIDATION_CHECKLIST.md  conftest.py  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: EVALUATION_PLAN.md  SAFE_THREAT_MODEL.md  architecture.md  build_troubleshooting.md  data_dictionary.md  ethics_and_safety.md  executive_summary.md  glossary.md  methodology.md  portfolio_one_pager.md  project_brief.md  readme_current.md  readme_update_instructions.md  release_gates.md  reviewer_index.md  secret_scan.md  style_guide.md  threat_model.md
paper/: README.md  citation_integration_notes.md  detection_rule_mapping.md  detector_thresholds.md  enriched_detection_results.md  figure_captions.md  manuscript.md  manuscript_assembled.md  publication_checklist.md  references.md  results_table.md  timeline_detection_results.md
rules/: README.md
scripts/: __init__.py  assemble_manuscript.py  build_polished_deliverable.py  build_polished_manuscript.py  export_scored_events.py  generate_figures.py  report_scenarios.py  verify_expected_results.py
tests/: test_detectors.py  test_enriched_timeline.py  test_event_model.py  test_expected_results.py  test_export_pipeline.py  test_figures.py  test_generators.py  test_helpdesk_reset.py  test_identity_detectors.py  test_metrics.py  test_timeline.py  (+1 more)
(+43 files in other folders)
